--- a/news.html
+++ b/news.html
@@ -47,7 +47,7 @@
           <div class="linkholder">
             <ul class="main-link-wrap">
               <li class="main-link-wrap-li">
-                <a href="howtocampus.html" class="main-link"><span>大阪観光大学</span></a>
+                <a href="howtocampus.html" class="main-link"><span class="hassub">大阪観光大学</span></a>
                 <ul class="sub-link-wrap">
                   <li><a href="" class="sub-link">学部・学科</a></li>
                   <li><a href="" class="sub-link">学費・奨学金<span class="imgwrap"><img src="img/imgs0/ico_out01.png" alt="ico_out01"></span></a></li>
@@ -56,7 +56,7 @@
                 </ul><!--  .sub-link-wrap -->
               </li>
               <li class="main-link-wrap-li">
-                <a href="nyusi.html" class="main-link nyusi"><span>入試情報</span></a>
+                <a href="nyusi.html" class="main-link nyusi"><span class="ml22 hassub">入試情報</span></a>
                 <ul class="sub-link-wrap nyusi">
                   <li>
                     <a href="" class="sub-link nyusi"><span>入試制度</span></a>
@@ -79,19 +79,19 @@
                 </ul><!--  .sub-link-wrap -->
               </li>
               <li class="main-link-wrap-li">
-                <a href="international.html" class="main-link"><span>外国人留学生の方</span></a>
+                <a href="international.html" class="main-link"><span class="ml22 hassub">外国人留学生の方</span></a>
                 <ul class="sub-link-wrap">
                   <li><a href="" class="sub-link">外国人留学生選抜</a></li>
                   <li><a href="" class="sub-link">外国人留学生編入学選抜</a></li>
                   <li><a href="" class="sub-link">入試日程（留学生）</a></li>
                 </ul><!--  .sub-link-wrap -->
               </li>
-              <li class="main-link-wrap-li">
-                <a href="news.html" class="main-link selected"><span>お知らせ</span></a>
+              <li class="main-link-wrap-li mlwl-news">
+                <a href="news.html" class="main-link selected trfr270deg"><span>お知らせ</span></a>
               </li>
               <li class="main-link-wrap-li">
                 <a href="contact.html" class="main-link"><span>お問い合わせ</span></a>
-                <ul class="sub-link-wrap">
+                <ul class="sub-link-wrap notfire">
                   <li><a href="" class="sub-link">お問い合わせ</a></li>
                   <li><a href="" class="sub-link">オープンキャンパス<span class="imgwrap"><img src="img/imgs0/ico_out01.png" alt="ico_out01"></span></a></li>
                   <li><a href="" class="sub-link">個別相談会<span class="imgwrap"><img src="img/imgs0/ico_out01.png" alt="ico_out01"></span></a></li>
