update: aタグ内のpタグをspanに変更

--- a/contact.html
+++ b/contact.html
@@ -208,8 +208,8 @@
                     <img src="img/imgs5/img_contact01.jpg" alt="pic_top01" class="">
                   </span>
                   <span class="oc-link-txtwrap">
-                    <span class="oc-link-txt-outer"><p class="oc-link-txt">オープンキャンパス<span>OPEN CAMPUS</span></p><!--  .oc-link-txt --></span>
-                    <p class="oc-comp-txt">学生スタッフのプロデユースで行われる、お楽しみ満載の1日。学生による夢プレゼンやキャンパスツアー、教員による各専門分野の講義などを体験できます。</p><!--  .oc-comp-txt -->
+                    <span class="oc-link-txt-outer"><span class="oc-link-txt">オープンキャンパス<span>OPEN CAMPUS</span></span><!--  .oc-link-txt --></span>
+                    <span class="oc-comp-txt">学生スタッフのプロデユースで行われる、お楽しみ満載の1日。学生による夢プレゼンやキャンパスツアー、教員による各専門分野の講義などを体験できます。</span><!--  .oc-comp-txt -->
                     <span class="oc-txtlinkwrap"><span>オープンキャンパス</span></span>
                   </span>
                 </a></div><!--  .oc-link -->
@@ -219,8 +219,8 @@
                       <img src="img/imgs5/img_contact02.jpg" alt="pic_top02" class="">
                     </span>
                     <span class="oc-link-txtwrap">
-                      <span class="oc-link-txt-outer"><p class="oc-link-txt">個別相談会<span>GUIDANCE</span></p><!--  .oc-link-txt --></span>
-                      <p class="oc-comp-txt">学生スタッフのプロデユースで行われる、お楽しみ満載の1日。学生による夢プレゼンやキャンパスツアー、教員による各専門分野の講義などを体験できます。</p><!--  .oc-comp-txt -->
+                      <span class="oc-link-txt-outer"><span class="oc-link-txt">個別相談会<span>GUIDANCE</span></span><!--  .oc-link-txt --></span>
+                      <span class="oc-comp-txt">学生スタッフのプロデユースで行われる、お楽しみ満載の1日。学生による夢プレゼンやキャンパスツアー、教員による各専門分野の講義などを体験できます。</span><!--  .oc-comp-txt -->
                       <span class="oc-txtlinkwrap guidances"><span>個別説明会</span></span>
                     </span>
                   </a></div><!--  .oc-link -->
@@ -234,8 +234,8 @@
                     <img src="img/imgs5/img_contact03.jpg" alt="pic_top03.jpg" class="">
                   </span>
                   <span class="oc-link-txtwrap">
-                    <span class="oc-link-txt-outer"><p class="oc-link-txt">資料請求<span>REQUEST</span></p><!--  .oc-link-txt --></span>
-                    <p class="oc-comp-txt">学生スタッフのプロデユースで行われる、お楽しみ満載の1日。学生による夢プレゼンやキャンパスツアー、教員による各専門分野の講義などを体験できます。</p><!--  .oc-comp-txt -->
+                    <span class="oc-link-txt-outer"><span class="oc-link-txt">資料請求<span>REQUEST</span></span><!--  .oc-link-txt --></span>
+                    <span class="oc-comp-txt">学生スタッフのプロデユースで行われる、お楽しみ満載の1日。学生による夢プレゼンやキャンパスツアー、教員による各専門分野の講義などを体験できます。</span><!--  .oc-comp-txt -->
                     <span class="oc-txtlinkwrap"><span>オープンキャンパス</span></span>
                   </span>
                 </a></div><!--  .oc-link -->
