--- a/news.html
+++ b/news.html
@@ -160,10 +160,10 @@
               </span>
               <span class="news-content-txtwrap underlayer-news-content-txtwrap">
                 <span class="main-txt">
-                  <p>本学2022年度版大学案内冊子の写真撮影がスタ...</p>
+                  <span class="span">本学2022年度版大学案内冊子の写真撮影がスタ...</span>
                 </span>
                 <span class="sub-txt">
-                  <p>来春発行予定の本学2022年度版大学案内冊子の製作が本格...</p>
+                  <span class="span">来春発行予定の本学2022年度版大学案内冊子の製作が本格...</span>
                 </span><!--  .sub-txt -->
                 <time>2020.12.21</time>
               </span>
@@ -176,10 +176,10 @@
               </span>
               <span class="news-content-txtwrap underlayer-news-content-txtwrap">
                 <span class="main-txt">
-                  <p>2020年度 個別相談会開催のお知らせ</p>
+                  <span>2020年度 個別相談会開催のお知らせ</span>
                 </span>
                 <span class="sub-txt">
-                  <p>本学では、後述の日程にて個別相談会(完全事前予約制)を開...</p>
+                  <span>本学では、後述の日程にて個別相談会(完全事前予約制)を開...</span>
                 </span><!--  .sub-txt -->
                 <time>2020.12.21</time>
               </span>
@@ -192,10 +192,10 @@
               </span>
               <span class="news-content-txtwrap underlayer-news-content-txtwrap">
                 <span class="main-txt">
-                  <p>【重要】11月21日(土)に本学の入学試験を受...</p>
+                  <span>【重要】11月21日(土)に本学の入学試験を受...</span>
                 </span>
                 <span class="sub-txt">
-                  <p>先にお伝えしましたとおり、大阪観光大学に所属する学生1名...</p>
+                  <span>先にお伝えしましたとおり、大阪観光大学に所属する学生1名...</span>
                 </span><!--  .sub-txt -->
                 <time>2020.11.18</time>
               </span>
@@ -208,10 +208,10 @@
               </span>
               <span class="news-content-txtwrap underlayer-news-content-txtwrap">
                 <span class="main-txt">
-                  <p>【総括レポート】オープンキャンパス2020を終...</p>
+                  <span>【総括レポート】オープンキャンパス2020を終...</span>
                 </span>
                 <span class="sub-txt">
-                  <p>本学では8月8日(土)と23日(日)･9月13日(日)･...</p>
+                  <span>本学では8月8日(土)と23日(日)･9月13日(日)･...</span>
                 </span><!--  .sub-txt -->
                 <time>2020.11.05</time>
               </span>
@@ -224,10 +224,10 @@
               </span>
               <span class="news-content-txtwrap underlayer-news-content-txtwrap">
                 <span class="main-txt">
-                  <p>2021年度大阪観光大学入学者選抜への対応につ...</p>
+                  <span>2021年度大阪観光大学入学者選抜への対応につ...</span>
                 </span>
                 <span class="sub-txt">
-                  <p>大阪観光大学の入学者選抜については本学HPにて公表してお...</p>
+                  <span>大阪観光大学の入学者選抜については本学HPにて公表してお...</span>
                 </span><!--  .sub-txt -->
                 <time>2020.10.22</time>
               </span>
@@ -240,10 +240,10 @@
               </span>
               <span class="news-content-txtwrap underlayer-news-content-txtwrap">
                 <span class="main-txt">
-                  <p>【重要】新型コロナウイルス感染症に伴う試験当日...</p>
+                  <span>【重要】新型コロナウイルス感染症に伴う試験当日...</span>
                 </span>
                 <span class="sub-txt">
-                  <p>受験生の皆さんへ 標記につきまして、本学を受験する方に向...</p>
+                  <span>受験生の皆さんへ 標記につきまして、本学を受験する方に向...</span>
                 </span><!--  .sub-txt -->
                 <time>2020.10.14</time>
               </span>
@@ -256,10 +256,10 @@
               </span>
               <span class="news-content-txtwrap underlayer-news-content-txtwrap">
                 <span class="main-txt">
-                  <p>大阪観光大学 2020年度イベントのご案内(9...</p>
+                  <span>大阪観光大学 2020年度イベントのご案内(9...</span>
                 </span>
                 <span class="sub-txt">
-                  <p>大阪観光大学では、2020年度も本学の魅力たっぷりのイベ....</p>
+                  <span>大阪観光大学では、2020年度も本学の魅力たっぷりのイベ....</span>
                 </span><!--  .sub-txt -->
                 <time>2020.12.21</time>
               </span>
@@ -272,10 +272,10 @@
               </span>
               <span class="news-content-txtwrap underlayer-news-content-txtwrap">
                 <span class="main-txt">
-                  <p>「WEB OPEN CAMPUS」特設サイトが...</p>
+                  <span>「WEB OPEN CAMPUS」特設サイトが...</span>
                 </span>
                 <span class="sub-txt">
-                  <p>新型コロナウィルスの影響でオープンキャンパスの開催に支障...</p>
+                  <span>新型コロナウィルスの影響でオープンキャンパスの開催に支障...</span>
                 </span><!--  .sub-txt -->
                 <time>2020.07.03</time>
               </span>
@@ -288,10 +288,10 @@
               </span>
               <span class="news-content-txtwrap underlayer-news-content-txtwrap">
                 <span class="main-txt">
-                  <p>【ご注意】7/19のオープンキャンパスについて</p>
+                  <span>【ご注意】7/19のオープンキャンパスについて</span>
                 </span>
                 <span class="sub-txt">
-                  <p>7月19日(日)開催のオープンキャンパスも、6月21日(...</p>
+                  <span>7月19日(日)開催のオープンキャンパスも、6月21日(...</span>
                 </span><!--  .sub-txt -->
                 <time>2020.07.01</time>
               </span>
@@ -304,10 +304,10 @@
               </span>
               <span class="news-content-txtwrap underlayer-news-content-txtwrap">
                 <span class="main-txt">
-                  <p>本学2022年度版大学案内冊子の写真撮影がスタ...</p>
+                  <span>本学2022年度版大学案内冊子の写真撮影がスタ...</span>
                 </span>
                 <span class="sub-txt">
-                  <p>来春発行予定の本学2022年度版大学案内冊子の製作が本格...</p>
+                  <span>来春発行予定の本学2022年度版大学案内冊子の製作が本格...</span>
                 </span><!--  .sub-txt -->
                 <time>2020.12.21</time>
               </span>
@@ -320,10 +320,10 @@
               </span>
               <span class="news-content-txtwrap underlayer-news-content-txtwrap">
                 <span class="main-txt">
-                  <p>7/19「個別相談会」開催のお知らせ</p>
+                  <span>7/19「個別相談会」開催のお知らせ</span>
                 </span>
                 <span class="sub-txt">
-                  <p>本学では7月19日(日)、「個別相談会」(事前予約制)を...</p>
+                  <span>本学では7月19日(日)、「個別相談会」(事前予約制)を...</span>
                 </span><!--  .sub-txt -->
                 <time>2020.12.21</time>
               </span>
@@ -336,10 +336,10 @@
               </span>
               <span class="news-content-txtwrap underlayer-news-content-txtwrap">
                 <span class="main-txt">
-                  <p>【重要】5/24(日) 第2回オープンキャンパ...</p>
+                  <span>【重要】5/24(日) 第2回オープンキャンパ...</span>
                 </span>
                 <span class="sub-txt">
-                  <p>今月24日(日)に開催を予定しておりました2020年度第...</p>
+                  <span>今月24日(日)に開催を予定しておりました2020年度第...</span>
                 </span><!--  .sub-txt -->
                 <time>2020.05.01</time>
               </span>
