--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@
                     </span>
                     <span class="news-content-txtwrap">
                       <span class="main-txt">
-                        <p>本学2022年度版大学案内冊子の写真撮影がスタ...</p>
+                        <span>本学2022年度版大学案内冊子の写真撮影がスタ...</span>
                       </span>
                       <span class="sub-txt">
-                        <p>来春発行予定の本学2022年度版大学案内冊子の製作が本格...</p>
+                        <span>来春発行予定の本学2022年度版大学案内冊子の製作が本格...</span>
                       </span><!--  .sub-txt -->
                       <time>2020.12.21</time>
                     </span>
@@ -209,8 +209,8 @@
                       <img src="img/imgs0/IMG_0052ed.jpg" alt="IMG_0052ed">
                     </span>
                     <span class="news-content-txtwrap">
-                      <span class="main-txt"><p>2020年度 個別相談会開催のお知らせ</p></span><!--  .main-txt -->
-                      <span class="sub-txt"><p>本学では、後述の日程にて個別相談会(完全事前予約制)を開...</p></span><!--  .sub-txt -->
+                      <span class="main-txt"><span>2020年度 個別相談会開催のお知らせ</span></span><!--  .main-txt -->
+                      <span class="sub-txt"><span>本学では、後述の日程にて個別相談会(完全事前予約制)を開...</span></span><!--  .sub-txt -->
                       <time>2020.12.21</time>
                     </span>
                   </span>
@@ -221,8 +221,8 @@
                       <img src="img/imgs0/noimage.jpg" alt="noimage">
                     </span>
                     <span class="news-content-txtwrap">
-                      <span class="main-txt"><p>【重要】11月21日(土)に本学の入学試験を受...</p></span><!--  .main-txt -->
-                      <span class="sub-txt"><p>先にお伝えしましたとおり、大阪観光大学に所属する学生1名...</p></span><!--  .sub-txt -->
+                      <span class="main-txt"><span>【重要】11月21日(土)に本学の入学試験を受...</span></span><!--  .main-txt -->
+                      <span class="sub-txt"><span>先にお伝えしましたとおり、大阪観光大学に所属する学生1名...</span></span><!--  .sub-txt -->
                       <time>2020.11.18</time>
                     </span>
                   </span>
@@ -248,10 +248,10 @@
                   </span>
                   <span class="nsinfo-txtwrap">
                     <span class="ttlwrap">
-                      <p><span class="span1">入試制度</span><span class="span2">ADMISSION TYPE</span></p>
+                      <span class="span"><span class="span1">入試制度</span><span class="span2">ADMISSION TYPE</span></span>
                     </span>
                     <span class="subwrap">
-                      <p><span>MORE</span></p>
+                      <span class="span"><span>MORE</span></span>
                     </span>
                   </span>
                 </span>
@@ -263,10 +263,10 @@
                   </span>
                   <span class="nsinfo-txtwrap">
                     <span class="ttlwrap">
-                      <p><span class="span1">入試日程</span><span class="span2">ADMISSION SCHEDULE</span></p>
+                      <span class="span"><span class="span1">入試日程</span><span class="span2">ADMISSION SCHEDULE</span></span>
                     </span>
                     <span class="subwrap">
-                      <p><span>MORE</span></p>
+                      <span class="span"><span>MORE</span></span>
                     </span>
                   </span>
                 </span>
@@ -278,10 +278,10 @@
                   </span>
                   <span class="nsinfo-txtwrap">
                     <span class="ttlwrap">
-                      <p><span class="span1">入試Q&A</span><span class="span2">ADMISSION Q&A</span></p>
+                      <span class="span"><span class="span1">入試Q&A</span><span class="span2">ADMISSION Q&A</span></span>
                     </span>
                     <span class="subwrap">
-                      <p><span>MORE</span></p>
+                      <span class="span"><span>MORE</span></span>
                     </span>
                   </span>
                 </span>
