--- a/international.html
+++ b/international.html
@@ -330,10 +330,10 @@
               </span>
               <span class="itninfo-txtwrap">
                 <span class="ttlwrap">
-                  <p><span class="span1">入試日程</span><span class="span2">入試日程については<br class="sp">こちらをご覧ください。</span></p>
+                  <span class="span"><span class="span1">入試日程</span><span class="span2">入試日程については<br class="sp">こちらをご覧ください。</span></span>
                 </span>
                 <span class="subwrap itn">
-                  <p><span>MORE</span></p>
+                  <span class="span"><span>MORE</span></span>
                 </span>
               </span>
             </span>
@@ -345,10 +345,10 @@
               </span>
               <span class="itninfo-txtwrap">
                 <span class="ttlwrap">
-                  <p><span class="span1">費用</span><span class="span2">学費については<br class="sp">こちらをご覧ください。</span></p>
+                  <span class="span"><span class="span1">費用</span><span class="span2">学費については<br class="sp">こちらをご覧ください。</span></span>
                 </span>
                 <span class="subwrap itn">
-                  <p><span>MORE</span></p>
+                  <span class="span"><span>MORE</span></span>
                 </span>
               </span>
             </span>
