update: aタグ内txtwrap内のspan(元pタグ)を削除・スタイル修正

--- a/index.html
+++ b/index.html
@@ -248,10 +248,10 @@
                   </span>
                   <span class="nsinfo-txtwrap">
                     <span class="ttlwrap">
-                      <span class="span"><span class="span1">入試制度</span><span class="span2">ADMISSION TYPE</span></span>
+                      <span class="span1">入試制度</span><span class="span2">ADMISSION TYPE</span>
                     </span>
                     <span class="subwrap">
-                      <span class="span"><span>MORE</span></span>
+                      <span>MORE</span>
                     </span>
                   </span>
                 </span>
@@ -263,10 +263,10 @@
                   </span>
                   <span class="nsinfo-txtwrap">
                     <span class="ttlwrap">
-                      <span class="span"><span class="span1">入試日程</span><span class="span2">ADMISSION SCHEDULE</span></span>
+                      <span class="span1">入試日程</span><span class="span2">ADMISSION SCHEDULE</span>
                     </span>
                     <span class="subwrap">
-                      <span class="span"><span>MORE</span></span>
+                      <span>MORE</span>
                     </span>
                   </span>
                 </span>
@@ -278,10 +278,10 @@
                   </span>
                   <span class="nsinfo-txtwrap">
                     <span class="ttlwrap">
-                      <span class="span"><span class="span1">入試Q&A</span><span class="span2">ADMISSION Q&A</span></span>
+                      <span class="span1">入試Q&A</span><span class="span2">ADMISSION Q&A</span>
                     </span>
                     <span class="subwrap">
-                      <span class="span"><span>MORE</span></span>
+                      <span>MORE</span>
                     </span>
                   </span>
                 </span>
