--- a/international.html
+++ b/international.html
@@ -330,7 +330,7 @@
               </span>
               <span class="itninfo-txtwrap">
                 <span class="ttlwrap">
-                  <span class="span"><span class="span1">入試日程</span><span class="span2">入試日程については<br class="sp">こちらをご覧ください。</span></span>
+                  <span class="span1">入試日程</span><span class="span2">入試日程については<br class="sp">こちらをご覧ください。</span>
                 </span>
                 <span class="subwrap itn">
                   <span class="span"><span>MORE</span></span>
@@ -345,7 +345,7 @@
               </span>
               <span class="itninfo-txtwrap">
                 <span class="ttlwrap">
-                  <span class="span"><span class="span1">費用</span><span class="span2">学費については<br class="sp">こちらをご覧ください。</span></span>
+                  <span class="span1">費用</span><span class="span2">学費については<br class="sp">こちらをご覧ください。</span>
                 </span>
                 <span class="subwrap itn">
                   <span class="span"><span>MORE</span></span>
