update: containerとwrapperの名称を変更

--- a/contact.html
+++ b/contact.html
@@ -30,11 +30,11 @@
     </div><!--  .burg -->
 
     <header class="header">
-      <div class="container">
-        <div class="wrapper">
+      <div class="header-container">
+        <div class="header-wrapper">
           <div class="logo">
             <div class="imgcont">
-              <div class="imgwrap"><img src="img/imgs0/logo01_pc.png" alt="logo01_pc" class="pc"></div><!--  .imgwrap -->
+              <div class="imgwrap"><a href="./"><img src="img/imgs0/logo01_pc.png" alt="logo01_pc" class="pc"></a></div><!--  .imgwrap -->
             </div><!--  .imgcont -->
           </div><!--  .logo -->
           <div class="burgmenu sp">
@@ -196,8 +196,8 @@
 
 
   <div class="opencampus contact">
-    <div class="container">
-      <div class="wrapper">
+    <div class="opencampus-container">
+      <div class="opencampus-wrapper">
         <div class="opencampus-contents contact">
           <!-- .oc-linkswrap(>.oc-link*3(>a.oc-link-a.(>img.+span.oc-link-txtwrap(p.oc-link-txt(>span))))) -->
           <div class="oc-linkswrap contact">
@@ -250,8 +250,8 @@
 
     <footer class="footer">
       <a id="topBtn" class="gototop" href="#"><img src="img/imgs0/btn_pagetop.png" alt=""></a>
-      <div class="container">
-        <div class="wrapper">
+      <div class="f-container">
+        <div class="f-wrapper">
           <div class="footer-flexer">
             <div class="footer-1">
               <div class="footer-logo">
@@ -316,7 +316,8 @@
     </footer><!--  .footer -->
 
   <!-- header.header(>.logo+.linkholder)+section.herotop(>.herotop-swiper-container)+section.article(>.news+.nyusi+.international+.opencampus)+.footer(>.footer-flexer(>.footer-1(>.footer-logo)+.footer-2(>.footer-linkholder+.footer-pager))+.footer-share+.copyright) -->
-  <p class="test">test</p><!--  .test -->
+  <!-- <p class="test">test</p> -->
+  <!--  .test -->
 
 
   <script src="./js/lib.js" charset="utf-8"></script>
