--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
     </header><!--  .headersp sp -->
 
     <header class="header">
-      <div class="container">
-        <div class="wrapper">
+      <div class="header-container">
+        <div class="header-wrapper">
           <div class="logo">
             <div class="imgcont">
-              <div class="imgwrap"><img src="img/imgs0/logo01_pc.png" alt="logo01_pc" class="pc"></div><!--  .imgwrap -->
+              <div class="imgwrap"><a href="./"><img src="img/imgs0/logo01_pc.png" alt="logo01_pc" class="pc"></a></div><!--  .imgwrap -->
             </div><!--  .imgcont -->
           </div><!--  .logo -->
           <div class="burgmenu sp">
@@ -169,8 +169,8 @@
       <div class="news">
 
         <!-- (.container(.wrapper(>.news-flexer(>.news-ttl.sp+.news-contents)))) -->
-        <div class="container">
-          <div class="wrapper">
+        <div class="news-container">
+          <div class="news-wrapper">
             <div class="news-flexer">
 
               <div class="news-ttl pc">
@@ -294,8 +294,8 @@
 
 
       <div class="international">
-        <div class="container">
-          <div class="wrapper">
+        <div class="international-container">
+          <div class="international-wrapper">
             <!-- .itn-upperflex(>.itn-imgwrap(>img)+.itn-txtwrap(>.itn-ttl+.itn-txts(>.itn-txts+.itn-subtxts))) -->
             <div class="itn-upperflex">
               <div class="itn-ttl sp">
@@ -334,8 +334,8 @@
 
 
       <div class="opencampus">
-        <div class="container">
-          <div class="wrapper">
+        <div class="opencampus-container">
+          <div class="opencampus-wrapper">
             <div class="opencampus-contents">
               <!-- .oc-linkswrap(>.oc-link*3(>a.oc-link-a.(>img.+span.oc-link-txtwrap(p.oc-link-txt(>span))))) -->
               <div class="oc-linkswrap">
@@ -368,8 +368,8 @@
 
     <footer class="footer">
       <a id="topBtn" class="gototop" href="#"><img src="img/imgs0/btn_pagetop.png" alt=""></a>
-      <div class="container">
-        <div class="wrapper">
+      <div class="f-container">
+        <div class="f-wrapper">
           <div class="footer-flexer">
             <div class="footer-1">
               <div class="footer-logo">
